fix 2 spacing issues

--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -35,6 +35,8 @@ body.page-landing{
     color:#333;
     margin-left:-20px;
     margin-right:-25px;
+    margin-bottom:50px;
+    margin-top:40px;
     padding:20px;
     border-bottom:5px solid $body_bg;
 }
@@ -68,7 +70,7 @@ body.page-landing{
         padding:20px;
         padding-bottom:0;
         background:#fff;
-        
+        margin-bottom: 20px;
         p{
             color:#000;
             font-size:16px;
